fix: Export config button now works correctly
Bug: JavaScript called 'action=export' but API expected 'action=exportConfig'
Also: API returned raw array but JS expected {success: true, config: [...]}

Added APIActionParityTest to catch JS/PHP action name mismatches:
- testAllJsApiCallsHaveMatchingPhpHandlers: Verifies all JS API calls have PHP handlers
- testExportConfigActionExists: Verifies exportConfig handler exists
- testImportConfigActionExists: Verifies importConfig handler exists
- testExportConfigResponseFormat: Verifies response format matches JS expectations

241 tests, 519 assertions - all passing

--- a/source/usr/local/emhttp/plugins/custom.smb.shares/SMBShares.page
+++ b/source/usr/local/emhttp/plugins/custom.smb.shares/SMBShares.page
@@ -198,7 +198,7 @@ function importConfig() {
 }
 
 function exportConfig() {
-    $.get('/plugins/custom.smb.shares/api.php?action=export', function(response) {
+    $.get('/plugins/custom.smb.shares/api.php?action=exportConfig', function(response) {
         if (response.success) {
             swal({
                 title: "_(Export Configuration)_",
