--- a/source/usr/local/emhttp/plugins/custom.smb.shares/SMBShares.page
+++ b/source/usr/local/emhttp/plugins/custom.smb.shares/SMBShares.page
@@ -172,43 +172,70 @@ function reloadSamba() {
 }
 
 function importConfig() {
-    swal({
-        title: "_(Import Configuration)_",
-        text: "_(Paste your JSON configuration below)_:",
-        type: 'input',
-        showCancelButton: true,
-        confirmButtonText: "_(Import)_",
-        cancelButtonText: "_(Cancel)_",
-        inputPlaceholder: "_(JSON configuration)_"
-    }, function(input) {
-        if (input === false) return;
-        if (!input) {
-            swal.showInputError("_(Please enter a configuration)_");
-            return false;
+    // Create hidden file input for file selection
+    var fileInput = $('<input type="file" accept=".json" style="display:none">');
+    $('body').append(fileInput);
+    
+    fileInput.on('change', function(e) {
+        var file = e.target.files[0];
+        if (!file) {
+            fileInput.remove();
+            return;
         }
-        $.post('/plugins/custom.smb.shares/api.php', { action: 'import', config: input }, function(response) {
-            if (response.success) {
-                showSuccess("_(Configuration imported successfully)_");
-                setTimeout(function() { location.reload(); }, 1000);
-            } else {
-                showError(response.error || "_(Import failed)_");
+        
+        var reader = new FileReader();
+        reader.onload = function(e) {
+            var content = e.target.result;
+            try {
+                JSON.parse(content); // Validate JSON
+                $.post('/plugins/custom.smb.shares/api.php', { action: 'import', config: content }, function(response) {
+                    if (response.success) {
+                        showSuccess("_(Configuration imported successfully)_");
+                        setTimeout(function() { location.reload(); }, 1000);
+                    } else {
+                        showError(response.error || "_(Import failed)_");
+                    }
+                }, 'json');
+            } catch (err) {
+                showError("_(Invalid JSON file)_");
             }
-        }, 'json');
+            fileInput.remove();
+        };
+        reader.readAsText(file);
     });
+    
+    fileInput.click();
 }
 
 function exportConfig() {
     $.get('/plugins/custom.smb.shares/api.php?action=exportConfig', function(response) {
         if (response.success) {
+            var json = JSON.stringify(response.config, null, 2);
             swal({
                 title: "_(Export Configuration)_",
-                text: "<textarea readonly style='width:100%;height:200px;'>" + JSON.stringify(response.config, null, 2) + "</textarea>",
+                text: "<textarea readonly style='width:100%;height:200px;'>" + json + "</textarea>" +
+                      "<br><button type='button' class='btn' onclick='downloadConfig()' style='margin-top:10px'>_(Download as File)_</button>",
                 html: true,
                 confirmButtonText: "_(Close)_"
             });
+            // Store config for download
+            window._exportedConfig = json;
         } else {
             showError(response.error || "_(Export failed)_");
         }
     }, 'json');
+}
+
+function downloadConfig() {
+    if (!window._exportedConfig) return;
+    var blob = new Blob([window._exportedConfig], {type: 'application/json'});
+    var url = URL.createObjectURL(blob);
+    var a = document.createElement('a');
+    a.href = url;
+    a.download = 'custom-smb-shares.json';
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    URL.revokeObjectURL(url);
 }
 </script>
